// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<AdvancedFilters /> expect to render 1`] = `
<div
  styleName="AdvancedFilters"
>
  <div
    styleName="AdvancedFilters__Content"
  >
    Content
  </div>
  <a
    href=""
    onClick={[Function]}
    styleName="AdvancedFilters__Link"
  >
    Advanced filters
    <i
      aria-hidden="true"
      className="fa fa-chevron-down"
    />
  </a>
</div>
`;

exports[`<AdvancedFilters /> expect to turn content to hide 1`] = `
<div
  styleName="AdvancedFilters"
>
  <div
    styleName="AdvancedFilters__Content"
  >
    Content
  </div>
  <a
    href=""
    onClick={[Function]}
    styleName="AdvancedFilters__Link"
  >
    Advanced filters
    <i
      aria-hidden="true"
      className="fa fa-chevron-down"
    />
  </a>
</div>
`;

exports[`<AdvancedFilters /> expect to turn content to visible 1`] = `
<div
  styleName="AdvancedFilters"
>
  <div
    styleName="AdvancedFilters__Content AdvancedFilters__Content--visible"
  >
    Content
  </div>
  <a
    href=""
    onClick={[Function]}
    styleName="AdvancedFilters__Link"
  >
    <i
      aria-hidden="true"
      className="fa fa-chevron-up"
    />
  </a>
</div>
`;
